minor updates 4 regex notebook

--- a/code/regexes/regex.ipynb
+++ b/code/regexes/regex.ipynb
@@ -32,8 +32,8 @@
     "? - попередній символ є, або його немає  \n",
     "{} - інтервал повторів, {1,2} - попередній символ може зустрітися 1 або два рази поспіль \n",
     "[] - класи символів, може бути через тире. Наприклад, [0-9] - всі цифри  \n",
-    "\\ - екран\n",
-    "| - або \n",
+    "\\ - екран (наприклад, ставте \\ перед + щоб знайти саме \"+\", як знак )\n",
+    "| - або: напр. \"зрада|перемога\" знайде у тексті або \"зрада\", або \"перемога\"  \n",
     "( ) - поіменовані групи символів\n",
     "```\n",
     "\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
     "I'd like to test my luck, where is a duck\n",
     "\"\"\"\n",
     "\n",
-    "comp = re.compile(r'.?uck')    \n",
+    "comp = re.compile(r'.?uck')    # знайти  строці все, що має закінчення uck\n",
     "match = comp.findall(text)\n",
     "print( match )"
    ]
@@ -91,6 +91,7 @@
     }
    ],
    "source": [
+    "# текст новини\n",
     "news = u\"\"\"\n",
     "Після погромів у російських банках на допит викликають комбата \"ОУН\"\n",
     "24.02.2016 | 14:21\n",
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +179,7 @@
     "#match = re.findall(u'(?u)комбата|комбату|(комбат)', news)\n",
     "#match = re.findall(u'(?u)(?<=\").+?(?=\")', news) # positive loockahead and lookbehind\n",
     "\n",
-    "# все лапках\n",
+    "# все, що в лапках. зазвичай, це цікаві назви\n",
     "match = re.findall(u'(?u)\".+?\"', news)\n",
     "ppp(match)\n",
     "\n"
@@ -201,7 +202,7 @@
    },
    "outputs": [],
    "source": [
-    "# всі долари у світі!\n",
+    "# знайти всі долари, що згадуються у переписці\n",
     "!ag '\\$\\d+' ./clinton"
    ]
   },
