--- a/uku2018/code/m1-webscraper.Rmd
+++ b/uku2018/code/m1-webscraper.Rmd
@@ -18,17 +18,18 @@ content <- read_html(url)
 
 
 ### Title
-# 1st attempt
+# 1st attempt (we'll try and fail)
 content %>% html_nodes('li div.title a') %>% html_text()
 
-# 2st attempt
+# 2st attempt, slightly better 
 content %>% html_nodes('li div.title a:first-child') %>% html_text()
 
+# success!
 title <- content %>% html_nodes('div.articles-list li div.title a:first-child') %>% html_text()
 
 ### Link to article
-# g! rvest href attribute
-link <- content %>% html_nodes('li div.title a:first-child') %>% html_attr('href')
+# g! rvest href attribute (how to find function we need to extract attribute of a tag)
+link <- content %>% html_nodes('div.articles-list li div.title a:first-child') %>% html_attr('href')
 
 
 
@@ -40,12 +41,11 @@ content %>% html_nodes('div.articles-list li div.date') %>% html_text() # yep!
 time <- content %>% html_nodes('div.articles-list li div.date') %>% html_text() 
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
+# TODO: create dataframe from results and save it to csv file
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
+
+
+
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
