--- a/uku2018/code/m1-webscraper.Rmd
+++ b/uku2018/code/m1-webscraper.Rmd
@@ -15,7 +15,7 @@ css-selectors: https://www.w3schools.com/cssref/css_selectors.asp
 
 Нагадую! Конструкція у формі 
 data %>% function1() %>% function2() 
-- це конвейер, 1. який бере дані (об'єкт що розташований ліворуч),  2. трансформує їх за допомогою першої функції, 3. і результат передає в другу функцію (function2), яка їх знов таки трансформує у щось нове - так ми отримуємо кінцевий результат. У подібних конвеєрах кількість функцій, що перетворюють(трансформують дані) може бути довільно великою.
+це конвейер, 1. який бере дані (об'єкт що розташований ліворуч),  2. трансформує їх за допомогою першої функції, 3. і результат передає в другу функцію (function2), яка їх знов таки трансформує у щось нове - так ми отримуємо кінцевий результат. У подібних конвеєрах кількість функцій, що перетворюють(трансформують дані) може бути довільно великою.
 
 ```{r get}
 url <- "http://news.liga.net/all/"
@@ -47,7 +47,7 @@ time <- content %>% html_nodes('div.articles-list li div.date') %>% html_text()
 ```
 
 
-#TODO: create dataframe from results and save it to csv file
+####TODO: create dataframe from results and save it to csv file
 
 
 
